main/default/objects/Training_Plan_Section_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Not Started</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>In Progress</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Completed</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>