main/default/objects/Training_Plan_Section_Assignment__c/fields/Training_Plan_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Plan Assignment</label>
    <referenceTo>Training_Plan_Assignment__c</referenceTo>
    <relationshipLabel>Training Plan Section Assignments</relationshipLabel>
    <relationshipName>Training_Plan_Section_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>