main/default/objects/Training_Plan_Section_Assignment__c/fields/Training_Plan_Section__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Plan Section</label>
    <referenceTo>Training_Plan_Section__c</referenceTo>
    <relationshipLabel>Training Plan Section Assignments</relationshipLabel>
    <relationshipName>Training_Plan_Section_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>